# diary-api

./: .env.template  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2481ca2a3c99_create_diary_entries_table.py
src/diary_api/: crud.py  database.py  main.py  test_config.py
src/diary_api/api/: __init__.py
src/diary_api/api/routes/: __init__.py  diary.py
src/diary_api/models/: __init__.py  diary.py
src/diary_api/schemas/: __init__.py  diary.py
tests/: test_api.py  test_crud.py
